--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+.board {
+  margin: 1em;
+}
+
 .table {
   display: table;
 
@@ -13,6 +17,9 @@
   border: 1px solid black;
   height: 30px;
   width: 30px;
+  color: white;
+  font-family: sans-serif;
+  font-size: 1em;
 }
 
 .chooseX {
@@ -21,4 +28,15 @@
 
 .chooseO {
   background-color: blue;
+}
+
+.options ul {
+  padding: 1em;
+}
+
+.options ul li {
+  border: 3px solid black;
+  display: inline;
+  padding: 2px;
+  margin: 0 0 0 12px;
 }
